# events

./: .pre-commit-config.yaml  README.md
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  ruff.toml
backend/src/: db.sqlite3
backend/src/src/: __init__.py  settings.py  urls.py
backend/src/users/: models.py  serializers.py  urls.py  views.py
backend/src/users/migrations/: 0001_initial.py
