[tool.poetry]
name = "things-to-do"
version = "0.1.0"
description = "Subscribe to cultural places to get a list of their events"
authors = ["Anne Bequet"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.27.1"
pre-commit = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
